--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,34 +1,34 @@
-name: Ec2-deployement
+name: Ec2-deployment
 
-
-on: 
+on:
   push:
     branches:
       - main
 
 jobs:
   deploy:
-     runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-     steps:
-     - name: code checkout
-       uses: action-checkout@v2
+    steps:
+    - name: code checkout
+      uses: actions/checkout@v2
 
-     - name: install dependencies
-       run: |
-         sudo apt update
-         sudo apt install nginx -y
+    - name: install dependencies
+      run: |
+        sudo apt update
+        sudo apt install nginx -y
 
-     - name: build and test
-       run: |
-         # testing scripts
+    - name: build and test
+      run: |
+        # testing scripts
 
-     - name: deployement steps
-       uses: appleboy/ssh-action@v1.0.0
+    - name: deployment steps
+      uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         KEY: ${{ secrets.KEY }}
         port: ${{ secrets.PORT }}
         script: |
-           whoami
+          whoami
+
